IntelliSenseDocumentのプロパティとメソッドを更新
`IntelliSenseDocument.cs` では、`Members` プロパティを `MembersElements` に変更し、XML 文字列からメンバー要素を設定する `SetMembersInnerXml` メソッドを追加しました。このメソッドは、無効な XML 文字列に対して例外をスローします。

`Member.cs` では、`Member` クラスの定義と `InnerElements` および `InnerXml` プロパティの実装が削除されました。

`Messages.Designer.cs` と `Messages.resx` では、無効な XML 文字列に関するローカライズされた文字列 `InvalidXmlString` が追加され、関連するメッセージが定義されました。

--- a/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
@@ -120,6 +120,9 @@
   <data name="DirectoryCreated" xml:space="preserve">
     <value>Directory {directory} was created.</value>
   </data>
+  <data name="InvalidXmlString" xml:space="preserve">
+    <value>XML string is invalid.</value>
+  </data>
   <data name="UnableToConvertObjectToXml" xml:space="preserve">
     <value>Unable to convert object to XML.</value>
   </data>
