ローカライズされた文字列を追加
`DumpSettings`、`Translated`、`XmlDocumentCreating` の3つの新しいローカライズされた文字列を追加しました。これにより、設定変数、出力ファイルの数、XMLドキュメントの作成状況に関するメッセージが日本語で提供されるようになります。

--- a/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
@@ -120,14 +120,23 @@
   <data name="DirectoryCreated" xml:space="preserve">
     <value>Directory {directory} was created.</value>
   </data>
+  <data name="DumpSettings" xml:space="preserve">
+    <value>Setting variavles: {Variables}</value>
+  </data>
   <data name="InvalidXmlString" xml:space="preserve">
     <value>XML string is invalid.</value>
+  </data>
+  <data name="Translated" xml:space="preserve">
+    <value>The following {OutputFileCount} files were output: {OutputFiles}</value>
   </data>
   <data name="UnableToConvertObjectToXml" xml:space="preserve">
     <value>Unable to convert object to XML.</value>
   </data>
   <data name="XmlDocumentCreated" xml:space="preserve">
     <value>Xml document {OutputFileName} was created.</value>
+  </data>
+  <data name="XmlDocumentCreating" xml:space="preserve">
+    <value>Xml document {OutputFileName} is now creating.</value>
   </data>
   <data name="XmlDocumentLoaded" xml:space="preserve">
     <value>'{XmlDocumentPath}' file was loaded.</value>
