予期しない戻り値の警告ログを追加
AITranslatorクラスにおいて、予期しない戻り値が返された場合に警告をログに記録する機能を追加しました。また、新しいローカライズされた文字列`UnexpectedReturnValue`をMessages.Designer.csに追加し、Messages.resxファイルにその定義を追加しました。これにより、AIキャラクターが予期しない値を返した際のメッセージが適切に表示されるようになります。

--- a/src/TsunaCan.XmlDocumentationTranslator.AI/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.AI/Resources/Messages.resx
@@ -126,4 +126,7 @@
   <data name="TargetLanguagesCannotBeEmpty" xml:space="preserve">
     <value>Target languages cannot be empty.</value>
   </data>
+  <data name="UnexpectedReturnValue" xml:space="preserve">
+    <value>AI char return unexpected value: {chatReturnValue}</value>
+  </data>
 </root>
