無効な文化名に関するエラーメッセージを追加
`Messages.Designer.cs` と `Messages.resx` に新しいリソース文字列 `InvalidCultureName` を追加し、無効な文化名に関するエラーメッセージを提供します。
`Settings.cs` では、`OutputFileCultures` プロパティの実装を変更し、無効な文化名が指定された場合に `ArgumentException` をスローするようにしました。
さらに、`SettingsTest` クラスに新しいテストメソッド `OutputFileCultures_InvalidCultureName` を追加し、無効な文化名に対するエラーハンドリングを確認するテストを実装しました。

--- a/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
@@ -123,6 +123,9 @@
   <data name="DumpSettings" xml:space="preserve">
     <value>Setting variavles: {Variables}</value>
   </data>
+  <data name="InvalidCultureName" xml:space="preserve">
+    <value>Invalid culture name: {CultureName}.</value>
+  </data>
   <data name="InvalidXmlString" xml:space="preserve">
     <value>XML string is invalid.</value>
   </data>
