リソース名の変更とログメッセージの更新
`Messages.Designer.cs` で `DumpSettings` を `DumpCoreSettings` に変更し、関連するリソース取得メソッドを更新しました。また、`DirectoryCreated` の説明文も修正しました。

`Messages.resx` では、`DumpSettings` のデータを削除し、`DumpCoreSettings` のデータを追加しました。これにより、ローカライズされた文字列が更新されました。

`TranslationService.cs` では、`logger.LogInformation` の呼び出しを `DumpSettings` から `DumpCoreSettings` に変更し、設定情報をログに記録するメッセージを更新しました。

--- a/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
@@ -120,8 +120,8 @@
   <data name="DirectoryCreated" xml:space="preserve">
     <value>Directory {directory} was created.</value>
   </data>
-  <data name="DumpSettings" xml:space="preserve">
-    <value>Setting variavles: {Variables}</value>
+  <data name="DumpCoreSettings" xml:space="preserve">
+    <value>CoreSetting variavles: {Variables}</value>
   </data>
   <data name="InvalidCultureName" xml:space="preserve">
     <value>Invalid culture name: {CultureName}.</value>
