スペルミスを修正：AISetting と CoreSetting
`Messages.Designer.cs` と `Messages.resx` において、`AISetting` と `CoreSetting` の変数名のスペルミスを修正しました。具体的には、`variavles` を `variables` に変更しました。これにより、ローカライズされた文字列が正しく表示されるようになります。

--- a/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
@@ -121,7 +121,7 @@
     <value>Directory {directory} was created.</value>
   </data>
   <data name="DumpCoreSettings" xml:space="preserve">
-    <value>CoreSetting variavles: {Variables}</value>
+    <value>CoreSetting variables: {Variables}</value>
   </data>
   <data name="InvalidCultureName" xml:space="preserve">
     <value>Invalid culture name: {CultureName}.</value>
