--- a/src/TsunaCan.XmlDocumentationTranslator.AI/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.AI/Resources/Messages.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DumpAISettings" xml:space="preserve">
-    <value>AISetting variavles: {Variables}</value>
+    <value>AISetting variables: {Variables}</value>
   </data>
   <data name="DumpAssemblyName" xml:space="preserve">
     <value>XML document assembly name: {AssemblyName}</value>
