--- a/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
@@ -120,8 +120,11 @@
   <data name="DirectoryCreated" xml:space="preserve">
     <value>Directory {directory} was created.</value>
   </data>
-  <data name="DumpSettings" xml:space="preserve">
-    <value>Setting variavles: {Variables}</value>
+  <data name="DumpCoreSettings" xml:space="preserve">
+    <value>CoreSetting variables: {Variables}</value>
+  </data>
+  <data name="InvalidCultureName" xml:space="preserve">
+    <value>Invalid culture name: {CultureName}.</value>
   </data>
   <data name="InvalidXmlString" xml:space="preserve">
     <value>XML string is invalid.</value>
