設定管理と翻訳機能の改善
`AITranslator.cs` で `sourceLanguage` を nullable に変更し、プロンプト生成のための `CreatePrompt` メソッドを追加しました。
`Program.cs` では設定の取得方法を変更し、`ParameterNotSetException` を導入しました。
`ITranslator.cs` の `TranslateAsync` メソッドも `sourceLanguage` を nullable に更新。
`Messages` リソースに無効な文化名のメッセージを追加し、`ServiceCollectionExtensions.cs` では設定バインディングを削除しました。
`TranslationService.cs` ではコンストラクタから `CoreSettings` のオプションを削除し、直接パラメータを受け取るように変更。
`CoreSettings.cs` ではプロパティの直接使用を促進し、`ConvertTo` メソッドを統合。
テストコードも新しいメソッドシグネチャに合わせて更新し、`ParameterNotSetException` クラスを新たに追加しました。

--- a/src/TsunaCan.XmlDocumentationTranslator.Cli/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Cli/Resources/Messages.resx
@@ -117,31 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DirectoryCreated" xml:space="preserve">
-    <value>Directory {directory} was created.</value>
+  <data name="InvalidCultureName" xml:space="preserve">
+    <value>Invalid culture name: {CultureName}.</value>
   </data>
-  <data name="DumpCoreSettings" xml:space="preserve">
-    <value>CoreSetting variables: {Variables}</value>
-  </data>
-  <data name="InvalidXmlString" xml:space="preserve">
-    <value>XML string is invalid.</value>
-  </data>
-  <data name="Translated" xml:space="preserve">
-    <value>The following {OutputFileCount} files were output: {OutputFiles}</value>
-  </data>
-  <data name="UnableToConvertObjectToXml" xml:space="preserve">
-    <value>Unable to convert object to XML.</value>
-  </data>
-  <data name="XmlDocumentCreated" xml:space="preserve">
-    <value>Xml document {OutputFileName} was created.</value>
-  </data>
-  <data name="XmlDocumentCreating" xml:space="preserve">
-    <value>Xml document {OutputFileName} is now creating.</value>
-  </data>
-  <data name="XmlDocumentLoaded" xml:space="preserve">
-    <value>'{XmlDocumentPath}' file was loaded.</value>
-  </data>
-  <data name="XmlDocumentLoading" xml:space="preserve">
-    <value>Loading '{XmlDocumentPath}' file.</value>
+  <data name="ParameterNotSet" xml:space="preserve">
+    <value>The parameter {0} is not set.</value>
   </data>
 </root>
