新しいリソース文字列を追加
`Messages.Designer.cs` に `ArgumentIsNullOrEmpty` を追加し、引数が null または空であることを示すローカライズされたメッセージを提供します。`Messages.resx` には、対応する値「Argument is null or empty.」が設定され、アプリケーションがこのエラーメッセージを適切に表示できるようになります。

--- a/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/Resources/Messages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ArgumentIsNullOrEmpty" xml:space="preserve">
+    <value>Argument is null or empty.</value>
+  </data>
   <data name="DirectoryCreated" xml:space="preserve">
     <value>Directory {directory} was created.</value>
   </data>
