--- a/src/TsunaCan.XmlDocumentationTranslator.Cli/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Cli/Resources/Messages.resx
@@ -160,4 +160,7 @@ options:
   <data name="ParameterNotSet" xml:space="preserve">
     <value>The parameter {0} is not set.</value>
   </data>
+  <data name="ParameterValueNotSet" xml:space="preserve">
+    <value>The value for parameter {0} is not set.</value>
+  </data>
 </root>
