--- a/src/TsunaCan.XmlDocumentationTranslator.Cli/Resources/Messages.resx
+++ b/src/TsunaCan.XmlDocumentationTranslator.Cli/Resources/Messages.resx
@@ -117,10 +117,50 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="HelpMessage" xml:space="preserve">
+    <value>Description:
+  XML document file translator.
+
+Usage:
+  dotnet xml-document-translate [required settings] [options]
+
+required settings:
+  -s, --source-document-path &lt;Source xml document path&gt; XML document file path.
+  -l, --output-file-languages &lt;Output file languages&gt;   Comma-separated string of languages to be translated, e.g. en,ja,es.
+  -t, --token &lt;PAT&gt;                                     PAT of chat services to be used.
+
+options:
+  --source-document-language &lt;Source document language&gt; Language of source xml document, e.g. en. 
+  --output-directory-path &lt;Output directory&gt;            Output directory for translated XML documents.
+  --chat-endpoint-url &lt;Chat endpoint url&gt;               End point url of chat service.
+  --model-id &lt;Model Id&gt;                                 ID of the model available at the specified chat endpoint.
+  --chunk-size &lt;Chunk size&gt;                             Length of string to be sent to the chat service at one time.
+  --max-concurrent-requests &lt;Max concurent request&gt;     Number of chat service calls in parallel.
+  --log-level &lt;Log level&gt;                               Trace | Debug | Information | Warning | Error | Critical | None
+  -h, --help                                            Show help.</value>
+  </data>
+  <data name="InvalidChatEndpointUrl" xml:space="preserve">
+    <value>--chat-endpoint-url must be set to an absolute URL.</value>
+  </data>
+  <data name="InvalidChunkSize" xml:space="preserve">
+    <value>--chunk-size must be set to integer value.</value>
+  </data>
   <data name="InvalidCultureName" xml:space="preserve">
-    <value>Invalid culture name: {CultureName}.</value>
+    <value>Invalid culture name: {0}.</value>
+  </data>
+  <data name="InvalidLogLevel" xml:space="preserve">
+    <value>--log-level must be set to Microsoft.Extensions.Logging.LogLevel value.</value>
+  </data>
+  <data name="InvalidMaxConcurrentRequests" xml:space="preserve">
+    <value>--max-concurrent-requests must be set to integer value.</value>
+  </data>
+  <data name="InvalidVariableIsSet" xml:space="preserve">
+    <value>Value was expected, but the variable {0} is set.</value>
   </data>
   <data name="ParameterNotSet" xml:space="preserve">
     <value>The parameter {0} is not set.</value>
+  </data>
+  <data name="ParameterValueNotSet" xml:space="preserve">
+    <value>The value for parameter {0} is not set.</value>
   </data>
 </root>
